# neopz

./: .dropbox  .gitignore  CMakeLists.txt  README.md  TPZQuadCircle.cpp  TPZQuadCircle.hpp  neopz.kdev4  svn-commit.tmp
Pre/: CMakeLists.txt  TPZAcademicGeoMesh.cpp  TPZAcademicGeoMesh.h  TPZAnalyticSolution.cpp  TPZBuildSBFem.cpp  TPZBuildSBFem.h  TPZGmshReader.cpp  TPZGmshReader.h  TPZMHMeshControl.cpp  TPZMHMixedMeshControl.cpp  pzbuildmultiphysicsmesh.cpp  pzgengrid.cpp  pzgengrid.h  pzreadtetgen.cpp  tpzhierarquicalgrid.cpp
Pre/ParameterHandler/: CMakeLists.txt  complex_overloads.h  exceptions.cpp  exceptions.h  job_identifier.cpp  job_identifier.h  logstream.cpp  logstream.h  main.cpp  memory_consumption.h  numbers.h  parameter_handler.cpp  parameter_handler.h  path_search.cpp  path_search.h  patterns.cpp  patterns.h  smartpointer.h  subscriptor.cpp  subscriptor.h  template_constraints.h  thread_local_storage.h  thread_management.cpp  thread_management.h  types.h  utilities.cpp  utilities.h
Projects/: CMakeLists.txt
Projects/Andrade/: Main.cpp
Projects/Bima1/: Bima1.cpp
Projects/BlackOil/: CMakeLists.txt
Projects/BoostPython/: CMakeLists.txt  PZPythonFunc.cpp  PZPythonFunc.h  pyz.cpp  testPython.py
Projects/CreepStokes/: DarcyPTest.cpp  HStokesTest.cpp  StokesTest.cpp  TPZCouplingDSMaterial.cpp  TPZCouplingDSMaterial.h  TPZDarcyPMaterial.cpp  TPZDarcyPMaterial.h  TPZStokesMaterial.cpp  TPZStokesMaterial.h  main.cpp
Projects/DarcyflowAxisymmetricHdiv/: TPZDarcyAnalysis.cpp
Projects/DarcyflowHdiv3D/: TPZDarcyAnalysis.cpp
Projects/Descontinuo2/: main.cpp
Projects/Elasticity2DTensor/: CMakeLists.txt  Elasticity2DLog.cfg  ElasticityRules.nb  Main.cpp
Projects/ErrorEstimation/: TPZCreateMesh.cpp  TPZPostProcessError.cpp  TPZPostProcessError.h  main.cpp
Projects/Frac1DHdiv/: TPZMatDarcy2dhdiv.cpp  TPZMatDarcy2dhdiv.h  TPZMatfrac1dhdiv.cpp  TPZMatfrac1dhdiv.h
Projects/GPU_poisson/: CMakeLists.txt  GPU_poisson.cpp  TPZPrimalPoisson.cpp  TPZPrimalPoisson.h
Projects/Girkmann/: CMakeLists.txt  main.cpp  meshgen.h  pzmixedelasmat.cpp
Projects/Girktest/: CMakeLists.txt  main.cpp  mainGirkmann.cpp  meshgen.h  meshgeng.cpp  pzmixedelasmatg.cpp
Projects/GlobalPostPro/: Testepp.cpp  mat2dpospro.cpp  mat2dpospro.h
Projects/Gradient_Reconstruction/: ExactSolutions.nb
Projects/HCurl2D/: CMakeLists.txt  HCurl2D.cpp  TPZMatHCurl2D.cpp  TPZMatHCurl2D.h
Projects/HCurlProjection/: CMakeLists.txt  HCurlProjection.cpp  TPZMatHCurlProjection.cpp  TPZMatHCurlProjection.h
Projects/Hdiv3DCurved/: Hdiv3DCurved.cpp  TPZDualPoisson.cpp  TPZPrimalPoisson.cpp  TPZPrimalPoisson.h
Projects/Helmholtz2D/: CMakeLists.txt  Helmholtz2D.cpp  TPZMatHelmholtz2D.cpp  TPZMatHelmholtz2D.h  TPZMatHelmholtz2DHDivRot.cpp  TPZMatHelmholtz2DHDivRot.h
Projects/Helmholtz2DLagrange/: CMakeLists.txt  Helmholtz2DLagrange.cpp  TPZMatHelmholtz2DLagrange.cpp  TPZMatHelmholtz2DLagrange.h
Projects/HpAdaptivity/: PZMatPoissonControl.cpp  PZMatPoissonControl.h  Tools.cpp
Projects/InhomogeneousModalAnalysisH1/: CMakeLists.txt  InhomogeneousModalAnalysisH1.cpp  TPZMatInhomogeneousModalAnalysisH1.cpp  TPZMatInhomogeneousModalAnalysisH1.h
Projects/LNCC1/: log4cxx.cfg  main.cpp
Projects/LNCC2/: CMakeLists.txt  main.cpp  main.cpp1
Projects/LNCC4/: CMakeLists.txt  main.cpp
Projects/Lua01/: main.cpp
Projects/MFHCurlFran/: CMakeLists.txt  MFHCurlFran.cpp  TPZMatMFHCurlFran.cpp  TPZMatMFHCurlFran.h
Projects/MFHCurlH1/: CMakeLists.txt  MFHCurlH1.cpp  TPZMatComplexH12D.cpp  TPZMatComplexH12D.h  TPZMatMFHCurlH1.cpp  TPZMatMFHCurlH1.h  TPZMatMFHDivRotH1.cpp  TPZMatMFHDivRotH1.h  TPZMatWaveguideCutOffAnalysis.cpp  TPZMatWaveguideCutOffAnalysis.h
Projects/MFHCurlH1Lag/: CMakeLists.txt  MFHCurlH1Lag.cpp  TPZMatMFHCurlH1Lag.cpp  TPZMatMFHCurlH1Lag.h  TPZMatWaveguideCutOffAnalysisLag.cpp  TPZMatWaveguideCutOffAnalysisLag.h
Projects/MHM/: AproximacoesMHM.xlsx  AproximacoesMHMAligned mesh.xlsx  CMakeLists.txt  MHM.txt  TPZMatLaplacianHybrid.cpp  TPZMatLaplacianHybrid.h  main-H1-Hdiv.cpp  main.cpp
Projects/MatLib/: Main.cpp  TPZMatLibMaterial.cpp  TPZMatLibMaterial.h
Projects/MixedElasticity/: CMakeLists.txt  Girkmann.geo  Girkmann.msh  main.cpp  mainGirkmann.cpp  meshgen.cpp  meshgen.h  pzmixedelasmat.cpp  pzmixedelasmat.h
Projects/MixedPoroElasticity/: CMakeLists.txt  main.cpp  meshgen.cpp  meshgen.h  pzmixedporoelasmat.cpp  pzmixedporoelasmat.h
Projects/ModalAnalysis/: CMakeLists.txt  ModalAnalysis.cpp  TPZMatMFHDivRotH1.cpp  TPZMatMFHDivRotH1.h  TPZMatModalAnalysis.cpp  TPZMatModalAnalysis.h  TPZMatWaveguideCutOffAnalysis.cpp  TPZMatWaveguideCutOffAnalysis.h  circle.geo  circle.msh  circlequad.geo  circlequad.msh
Projects/ModalAnalysisH1/: CMakeLists.txt  ModalAnalysisH1.cpp  TPZMatModalAnalysisH1.cpp  TPZMatModalAnalysisH1.h
Projects/ModalAnalysisHDiv/: CMakeLists.txt  ModalAnalysisHDiv.cpp  TPZMatModalAnalysisHDiv.cpp  TPZMatModalAnalysisHDiv.h
Projects/MonophasicWell/: TPZMonoPhaseWell.cpp
Projects/MultiphysicsSimulation/: main.cpp  main_twomesh.cpp  poissondesacoplados.cpp  poissondesacoplados.h
Projects/MultiscaleHybridMixed/: CMakeLists.txt  main.cpp
Projects/NewModalAnalysis/: CMakeLists.txt  NewModalAnalysis.cpp  SPZModalAnalysisData.cpp  SPZModalAnalysisData.h  SPZModalAnalysisDataReader.cpp  SPZModalAnalysisDataReader.h  coarseMesh.msh  fineMesh.msh  param-sample-file.pz  refinedInterfaceMesh.msh
Projects/NonDarcyflow/: NonDarcyFlow.cpp  problemdata.h  pznondarcyflow.h
Projects/NonLinBiharmonic/: CMakeLists.txt
Projects/PermeabilityCoupling/: TPZPoroPermAnalysis.cpp  TPZPoroPermAnalysis.h  TPZPoroPermCoupling.cpp  TPZPoroPermCoupling.h  TPZPoroPermMemory.cpp  TPZPoroPermMemory.h
Projects/PlasticVerification/: CMakeLists.txt  main.cpp
Projects/Plasticity/: main.cpp  poroelastoplastic.cpp  tests.cpp
Projects/PlasticityPV/: PlasticityPV.cpp
Projects/Poisson3D_Shock/: Solution2.cpp  TPZCreateHDivMesh.cpp  main.cpp
Projects/Poisson_ArcTan/: main.cpp  pzcclonemesh.cpp
Projects/PoroElasticAnalysis/: Main.cpp  pzporoelastic2d.cpp  (+5 more)
lib/: CMakeLists.txt
(+530 files in other folders)
